n8n-kubernetes-hosting/prometheus-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-clusterip
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus
