n8n-kubernetes-hosting/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: monitoring-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: grafana-ssl-cert
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: grafana-ssl-cert
spec:
  rules:
  - host: grafana-logcomex.34-8-101-220.nip.io
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /*
        pathType: ImplementationSpecific
