n8n-kubernetes-hosting/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: monitoring-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: prometheus-ssl-cert
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: prometheus-ssl-cert
spec:
  rules:
  - host: prometheus-logcomex.34-8-101-220.nip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /*
        pathType: ImplementationSpecific
